# plover_stitching

./: README.rst  setup.cfg
plover_stitching/: __init__.py  commands.py  stitching.py
test/: test_blackbox.py  test_plover_stitching.py
