[metadata]
name = plover_stitching
version = 0.1.0
description = Stitch words like T-H-I-S using Plover strokes
long_description = file: README.rst
author = Ted Morin
author_email = morinted@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/morinted/plover_stitching
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
include_package_data = True
install_requires =
    plover>=4.0.0.dev7
packages =
    plover_stitching

[options.entry_points]
plover.meta =
    stitch = plover_stitching.commands:stitch
    stitch_last_word = plover_stitching.commands:stitch_last_word

[tool:pytest]
python_files = test/test_*.py
